--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,42 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.container {
+  padding: 0 20px 20px 20px;
+}
+
+.task-form {
+  width: 500px;
+  margin: 20px 0 20px 20px;
+}
+
+table tr td {
+  height: 40px;
+}
+
+table.task-new-table tr td {
+  width: 50px;
+}
+
+table.task-index-table tr td {
+  padding: 0 20px;
+}
+
+.btn-task-create {
+  cursor: pointer;
+  padding: 5px;
+}
+
+.table-body {
+  width: 200px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.task-index {
+  width: 1000px;
+  margin-left: 20px;
+}
+
