--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -25,7 +25,8 @@ table.done-task-table tr td {
   padding: 0 20px;
 }
 
-.btn-task-create {
+.btn-task-create,
+.btn-task-update {
   cursor: pointer;
   padding: 5px;
 }
