--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -21,8 +21,12 @@
         <td><%= @task.deadline_at.strftime("%Y/%m/%d %H:%M") %></td>
       </tr>
       <tr>
-        <td><%= link_to "Edit", edit_task_path(@task), class: 'btn-task-edit' %></td>
-        <td><%= link_to "Delete", task_path(@task), method: :delete, class: 'btn-task-destroy' %></td>
+        <td><%= link_to "Edit", edit_task_path(@task), class: 'btn btn-task-edit' %></td>
+        <td><%= link_to "Delete", task_path(@task), method: :delete, class: 'btn btn-task-destroy' %></td>
+      </tr>
+      <tr>
+        <td><%= link_to "Back", tasks_path, class: 'btn btn-back' %></td>
+        <td></td>
       </tr>
     </tbody>
     
