[Add]見た目修正

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -67,3 +67,8 @@ table.done-task-table tr td:nth-child(2) {
   background-color: gray;
 }
 
+.btn-task-done,
+.btn-task-edit,
+.btn-task-destroy {
+  text-decoration: none;
+}
