--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -38,6 +38,10 @@ table.done-task-table tr td:nth-child(2) {
   width: 100px;
 }
 
+.table-btn {
+  width: 50px;
+}
+
 .btn-task-create,
 .btn-task-update {
   cursor: pointer;
